--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -7,9 +7,14 @@ import Navigation from "@components/navigation.astro";
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Year of Code</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
+            rel="stylesheet"
+        /><title>Year of Code</title>
     </head>
-    <body class="min-h-screen">
+    <body>
         <Navigation />
         <div class="mt-[calc(2rem+5rem+2rem)]">
             <slot />
