--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,8 +8,7 @@ const projects = [
     },
     {
         title: "cave",
-        description:
-            "Funky, procedurally generated atmospheric cave exploration game.",
+        description: "Funky,  game.",
     },
     {
         title: "untitled website",
@@ -21,70 +20,93 @@ const projects = [
 <Layout>
     <div class="absolute top-0 left-0 w-full h-full -z-10 bg-black"></div>
     <p class="text-white ml-[calc(10vw)]">projects</p>
-    <ul
-        class="text-white pointer-events-auto grid grid-flow-row auto-rows-fr gap-y-4"
-    >
+    <ul class="text-white select-none grid grid-flow-row">
         {
             projects.map((project) => (
-                <li
-                    id="project"
-                    class="relative grid gap-x-4 grid-flow-col grid-cols-10 px-4 py-2"
-                >
-                    <div
-                        id="anime"
-                        class="z-20 ml-[10vw] w-[80vw] top-[50%] absolute h-0 bg-black transition-all duration-300 ease-in-out"
-                    />
+                <>
+                    <hr class="" />
+                    <li
+                        id="project"
+                        class="py-6 relative text-4xl font-extrabold tracking-tight lg:text-6xl uppercase"
+                    >
+                        <div
+                            id="anime"
+                            class="flex items-center justify-start z-20 w-full top-[50%] absolute h-0 bg-white transition-all duration-300 ease-in-out overflow-hidden"
+                        >
+                            <div class="px-4 py-2 grid grid-cols-10 items-center w-full">
+                                <h1 class="text-black col-start-2 col-end-7">
+                                    {project.title}
+                                </h1>
+                                <h3 class="text-black scroll-m-20 text-2xl font-semibold tracking-tight col-start-7 col-end-10">
+                                    {project.description}
+                                </h3>
+                            </div>
+                        </div>
 
-                    <div class="relative col-start-2 col-end-7 text-4xl font-extrabold tracking-tight lg:text-6xl uppercase">
-                        <h1 id="primary-text" class="z-0">
-                            {project.title}
-                        </h1>
-                        <h1 id="secondary-text" class="z-10 absolute hidden">
-                            OPPOSITE DAY
-                        </h1>
-                    </div>
-                    <p id="description" class="col-start-7 col-end-10 hidden">
-                        {project.description}
-                    </p>
-                </li>
+                        <div class="px-4 py-2 grid grid-cols-10 items-center">
+                            <h1 class="col-start-2 col-end-7">
+                                {project.title}
+                            </h1>
+                        </div>
+                    </li>
+                </>
             ))
         }
     </ul>
-    <h1 id="header"></h1>
+    <img
+        class="z-20 absolute left-0 origin-center -translate-y-1/2 scale-150 ease-in-out transition-all duration-75"
+        id="blaster"
+        src="gaster_blaster.png"
+    />
 </Layout>
 
+<style>
+    @keyframes gaster_blaster {
+        0% {
+            transform: translateX(-80%) translateY(-50%) scale(1.5);
+        }
+        100% {
+            transform: translateX(-25%) translateY(-50%) scale(1.25);
+        }
+    }
+
+    .gaster_blaster_anim {
+        animation: gaster_blaster 0.2s ease-in-out forwards;
+    }
+</style>
+
 <script>
+    let selectionCount = 0;
+    let blaster: HTMLElement = document.querySelector("#blaster")!;
+
     function handleElement(element: Element, select: boolean) {
         let bg = element.querySelector("#anime")!;
         const bgSelected = "h-full top-0".split(" ");
         const bgDeselected = "h-0 top-[50%]".split(" ");
-        const textSelected = "".split(" ");
-        const textDeselected = "hidden".split(" ");
-
-        let primary = element.querySelector("#primary-text")!;
-        let secondary = element.querySelector("#secondary-text")!;
         if (select) {
+            selectionCount += 1;
             bg.classList.add(...bgSelected);
             bg.classList.remove(...bgDeselected);
-            // secondary.classList.add(...textSelected);
-            // secondary.classList.remove(...textDeselected);
-            // primary.classList.remove(...textSelected);
-            // primary.classList.add(...textDeselected);
+            blaster.classList.remove("gaster_blaster_anim");
+            void blaster.offsetWidth;
+            blaster.classList.add("gaster_blaster_anim");
         } else {
+            selectionCount -= 1;
             bg.classList.remove(...bgSelected);
             bg.classList.add(...bgDeselected);
-            // secondary.classList.remove(...textSelected);
-            // secondary.classList.add(...textDeselected);
-            // primary.classList.add(...textSelected);
-            // primary.classList.remove(...textDeselected);
+            blaster.classList.remove("gaster_blaster_anim");
         }
+
+        blaster.style.display = selectionCount === 0 ? "none" : "inline";
     }
 
     let projects = document.querySelectorAll("#project");
     for (let project of projects) {
-        project.addEventListener("mouseenter", (_) =>
-            handleElement(project, true),
-        );
+        project.addEventListener("mouseenter", (_) => {
+            handleElement(project, true);
+            const rect = project.getBoundingClientRect();
+            blaster.style.top = `${rect.y + rect.height / 2}px`;
+        });
         project.addEventListener("mouseleave", (_) =>
             handleElement(project, false),
         );
