--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,14 +29,18 @@ const projects = [
                         id="project"
                         class="py-6 relative text-4xl font-extrabold tracking-tight lg:text-6xl uppercase"
                     >
-                        <img
-                            class="z-30 absolute top-0 left-0 origin-center ease-in-out transition-all duration-75"
+                        <div
+                            class="z-30 absolute top-0 left-0 origin-center h-full"
                             id="blaster"
-                            src="gaster_blaster.png"
-                        />
+                        >
+                            <img
+                                class="max-h-full h-auto object-contain aspect-auto"
+                                src="gaster_blaster.png"
+                            />
+                        </div>
                         <div
                             id="anime"
-                            class="flex items-center justify-start z-20 w-full top-[50%] absolute h-0 bg-white transition-all duration-150 ease-in-out overflow-hidden"
+                            class="flex items-center justify-start z-20 w-full top-0 left-0 origin-center absolute bg-white overflow-hidden"
                         >
                             <div class="px-4 py-2 grid grid-cols-10 items-center w-full">
                                 <h1 class="text-black col-start-2 col-end-7">
@@ -72,7 +76,6 @@ const projects = [
         }
         100% {
             transform: translateX(-25%) scale(1.25) translateY(6.25%);
-            background-image: url("gaster_blaster.png");
         }
     }
 
@@ -87,32 +90,52 @@ const projects = [
 
     @keyframes gaster_blaster_shot_enter {
         0% {
+            top: 50%;
+            height: 10%;
+            transform: translateY(-50%) translateX(-100%);
+            opacity: 1;
+        }
+        75% {
+            top: 50%;
+            transform: translateY(-50%) translateX(0%);
         }
         100% {
+            top: 50%;
+            height: 100%;
+            transform: translateY(-50%) translateX(0%);
+            opacity: 1;
         }
     }
 
     @keyframes gaster_blaster_shot_exit {
         0% {
+            top: 50%;
+            height: 100%;
+            transform: translateY(-50%) translateX(0%);
+            opacity: 1;
         }
         100% {
+            top: 50%;
+            height: 10%;
+            transform: translateY(-50%);
+            opacity: 0;
         }
     }
 
     .gaster_blaster_enter {
-        animation: gaster_blaster_enter 0.1s ease-in-out forwards;
+        animation: gaster_blaster_enter 0.15s ease-in-out forwards;
     }
 
     .gaster_blaster_exit {
-        animation: gaster_blaster_exit 0.2s ease-in-out forwards;
+        animation: gaster_blaster_exit 0.25s ease-in-out forwards;
     }
 
     .gaster_blaster_shot_enter {
-        animation: gaster_blaster_shot_enter 0.1s ease-in-out forwards;
+        animation: gaster_blaster_shot_enter 0.2s ease-in-out forwards;
     }
 
     .gaster_blaster_shot_exit {
-        animation: gaster_blaster_shot_exit 0.2s ease-in-out forwards;
+        animation: gaster_blaster_shot_exit 0.3s ease-in-out forwards;
     }
 </style>
 
@@ -121,28 +144,27 @@ const projects = [
     // let blaster: HTMLElement = document.querySelector("#blaster")!;
 
     function handleElement(element: Element, select: boolean) {
-        let bg = element.querySelector("#anime")!;
-        const bgSelected = "h-full top-0".split(" ");
-        const bgDeselected = "h-0 top-[50%]".split(" ");
-
+        let bg: HTMLElement = element.querySelector("#anime")!;
         const blaster: HTMLElement = element.querySelector("#blaster")!;
         if (select) {
             selectionCount += 1;
-            bg.classList.add(...bgSelected);
-            bg.classList.remove(...bgDeselected);
             blaster.classList.remove("gaster_blaster_exit");
             blaster.classList.remove("gaster_blaster_enter");
             void blaster.offsetWidth;
             blaster.classList.add("gaster_blaster_enter");
+
+            bg.classList.remove("gaster_blaster_shot_exit");
+            bg.classList.remove("gaster_blaster_shot_enter");
+            void bg.offsetWidth;
+            bg.classList.add("gaster_blaster_shot_enter");
         } else {
             selectionCount -= 1;
-            bg.classList.remove(...bgSelected);
-            bg.classList.add(...bgDeselected);
             blaster.classList.remove("gaster_blaster_enter");
             blaster.classList.add("gaster_blaster_exit");
-        }
 
-        // blaster.style.display = selectionCount === 0 ? "none" : "inline";
+            bg.classList.remove("gaster_blaster_shot_enter");
+            bg.classList.add("gaster_blaster_shot_exit");
+        }
     }
 
     let projects = document.querySelectorAll("#project");
