Theme switching. (incomplete styles)

--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -14,9 +14,9 @@ import Navigation from "@components/navigation.astro";
             rel="stylesheet"
         /><title>Year of Code</title>
     </head>
-    <body>
+    <body class="dark">
         <Navigation />
-        <div class="mt-[calc(2rem+5rem+2rem)]">
+        <div class="mt-[calc(2rem+5rem+2rem+10rem)]">
             <slot />
         </div>
     </body>
