--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,8 +18,15 @@ const projects = [
 ---
 
 <Layout>
-    <div class="absolute top-0 left-0 w-full h-full -z-10 bg-black"></div>
-    <p class="text-white ml-[calc(10vw)]">projects</p>
+    <div
+        class="absolute top-0 left-0 w-full h-full -z-10 dark:bg-black bg-white"
+    >
+    </div>
+    <p
+        class="text-white ml-[calc(10vw)] leading-7 text-sm uppercase tracking-[0.4em] mb-2 font-bold"
+    >
+        projects
+    </p>
     <ul class="text-white select-none grid grid-flow-row">
         {
             projects.map((project) => (
@@ -62,11 +69,6 @@ const projects = [
             ))
         }
     </ul>
-    <!-- <img
-        class="z-20 absolute left-0 origin-center -translate-y-1/2 scale-150 ease-in-out transition-all duration-75"
-        id="blaster"
-        src="gaster_blaster.png"
-    /> -->
 </Layout>
 
 <style>
@@ -141,7 +143,6 @@ const projects = [
 
 <script>
     let selectionCount = 0;
-    // let blaster: HTMLElement = document.querySelector("#blaster")!;
 
     function handleElement(element: Element, select: boolean) {
         let bg: HTMLElement = element.querySelector("#anime")!;
@@ -170,11 +171,9 @@ const projects = [
     let projects = document.querySelectorAll("#project");
     for (let project of projects) {
         handleElement(project, false);
-        project.addEventListener("mouseenter", (_) => {
-            handleElement(project, true);
-            // const rect = project.getBoundingClientRect();
-            // blaster.style.top = `${rect.y + rect.height / 2}px`;
-        });
+        project.addEventListener("mouseenter", (_) =>
+            handleElement(project, true),
+        );
         project.addEventListener("mouseleave", (_) =>
             handleElement(project, false),
         );
