--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -52,7 +52,7 @@ const projects = [
         class="dark:text-white text-black select-none grid grid-flow-row"
     >
         {
-            projects.map((project) => (
+            projects.map((project, idx) => (
                 <>
                     <hr class="dark:bg-gray-500 bg-gray-800" />
                     <li
@@ -73,6 +73,9 @@ const projects = [
                             class="dark:text-black text-white flex items-center justify-start z-20 w-full top-0 left-0 origin-center absolute dark:bg-white bg-black overflow-hidden"
                         >
                             <div class="px-4 py-2 grid grid-cols-10 items-center w-full">
+                                <h1 class="opacity-10 col-start-1 col-end-2 justify-self-end mr-10">
+                                    {idx + 1}
+                                </h1>
                                 <h1 class="col-start-2 col-end-7">
                                     {project.title}
                                 </h1>
@@ -80,6 +83,12 @@ const projects = [
                                     {project.description}
                                 </h3>
                             </div>
+                        </div>
+
+                        <div class="absolute top-0 left-0 w-full h-full px-4 py-2 grid grid-cols-10 items-center">
+                            <h1 class="opacity-10 col-start-1 col-end-2 justify-self-end mr-10">
+                                {idx + 1}
+                            </h1>
                         </div>
 
                         <div class="px-4 py-2 grid grid-cols-10 items-center">
